--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Landings#index</h1>
-<p>Find me in app/views/landings/index.html.erb</p>
+<h1>The background is the same color as a basketball</h1>
+<p>Just to make sure I can find this page again: app/views/landings/index.html.erb</p>
+
+<img src= http://images.mstarz.com/data/images/full/7251/nba.jpg >
